Fixed overlapping of mobile sidebar

--- a/styles/sidemenu.css
+++ b/styles/sidemenu.css
@@ -11,7 +11,7 @@
     position: fixed;
     left: 0px;
     right: 30%;
-    top: 50px;
+    top: 60px;
     bottom: 0px;
     background-color: white;
   }
